# car

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.toml
app/: schemas.py
app/api/: __init__.py
app/api/routes/: auth.py  services.py
app/core/models/: auth.py  base.py  car.py
app/core/services/: auth.py  car.py  dynaconf.py
app/database/: database.py  redis.py
app/middleware/: cache.py
data/redis/: dump.rdb
data/redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
test/: first_100_car_prices.csv  test.ipynb
